--- a/assets/css/patterns/hero-page.css
+++ b/assets/css/patterns/hero-page.css
@@ -4,7 +4,7 @@
 
 /** image */
 .gm-hero-page > div:first-child {
-  @apply min-h-[30vh] md:min-h-[35vh] lg:min-h-[40vh] bg-gradient-to-r from-slate-300 to-slate-100;
+  @apply min-h-[30vh] md:min-h-[35vh] lg:min-h-[60vh] bg-gradient-to-r from-slate-300 to-slate-100;
 }
 
 .gm-hero-page > div:first-child figure {
@@ -12,7 +12,7 @@
 }
 
 .gm-hero-page > div:first-child figure {
-  @apply flex w-5/6 h-full md:w-full max-h-[30vh] md:max-h-[35vh] lg:max-h-[40vh];
+  @apply flex w-5/6 h-full md:w-full max-h-[30vh] md:max-h-[35vh] lg:max-h-[60vh];
 }
 
 .gm-hero-page > div:first-child figure img {
